# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  configuration.yaml  docker-compose.yaml  rustfmt.toml
.sqlx/: query-1d7a2eab86ac28fc16acc8d95562ef1390aa4588c9553b5083a021a14429f54e.json  query-24651aaf3d6ffd1aec226ed9a9b82ffd9d595ca037c4c3e5250c6a939c2e608d.json  query-858dba06e9123cc60d16ab0156356e4e6557f5f96e59755bc510815497c9dfbe.json  query-8d66ed4bb58eabadcc4e451b08ed992da30b1fcdc40d545b460d91c7cadf2df2.json  query-90b0bc2c147af5caf48a371083669a3216553cf9dbe5564137a0022abe5652a8.json  query-a1c5aa4bf682b7971a30a68e01253d7398ccde7d254386cd6e019d259a755b30.json  query-ae54a5bc9a6865da326f474bda4f16dac47d96bc3a2f93a8edcbe1a3419cfe2d.json  query-ba168f8ce75b314f6c5d8259deb2f6914f7047facbd42eca61393cce7986df99.json  query-bf33dc6ec30c3c6eb7fa7889e6b0b631a66609a2a48c18a6ce3c96e96e7867e1.json  query-d5c95be277a86c23a0c6f5deb8ed531377e886b865752228a99c9def673bc1f3.json  query-fa231ca41e2af5639c6c4729d8eb38996da05eafb429d5ce01adb97ec0dbe347.json  query-fd7379c484a3053ada4a5c863313fbea2120464b5806a15b15edf581559b4e16.json
configuration/: default.yaml  dev.yaml  test.yaml
migrations/: 20250104132018_create_subscriptions_table.sql  20250122180526_add_status_to_subscribers.sql  20250125075131_make_subscriber_status_not_null.sql  20250125082029_create_subscription_tokens_table.sql
runner/: api.rs
src/: api.rs  assembly.rs  configuration.rs  domain.rs  infrastructure.rs  interface.rs  lib.rs  main.rs  startup.rs  telemetry.rs
tests/: healthz.rs  (+1 more)
(+123 files in other folders)
